--- a/src/Components/HeroSection/hero.css
+++ b/src/Components/HeroSection/hero.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     padding: 0 30px;
-    height: 800px;
+    height: 110vh;
     position: relative;
     z-index: 1;
     margin-top: -6rem;
@@ -46,7 +46,7 @@
     flex-direction: column;
     /* justify-content: center; */
     align-items: center;
-    top: 145px;
+    /* top: 145px; */
 }
 .home-content h2 strong{
     color: #01bf71;
